# protobuf/gen/go/api/v1/beemon.pb.gw.go
@@ -70,6 +70,45 @@ func local_request_BeemonService_ListProcesses_0(ctx context.Context, marshaler 
 	return msg, metadata, err
 }
 
+func request_BeemonService_GetProcessMetadata_0(ctx context.Context, marshaler runtime.Marshaler, client BeemonServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetProcessMetadataRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	if req.Body != nil {
+		_, _ = io.Copy(io.Discard, req.Body)
+	}
+	val, ok := pathParams["pid"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "pid")
+	}
+	protoReq.Pid, err = runtime.Uint32(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "pid", err)
+	}
+	msg, err := client.GetProcessMetadata(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	return msg, metadata, err
+}
+
+func local_request_BeemonService_GetProcessMetadata_0(ctx context.Context, marshaler runtime.Marshaler, server BeemonServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+	var (
+		protoReq GetProcessMetadataRequest
+		metadata runtime.ServerMetadata
+		err      error
+	)
+	val, ok := pathParams["pid"]
+	if !ok {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "pid")
+	}
+	protoReq.Pid, err = runtime.Uint32(val)
+	if err != nil {
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "pid", err)
+	}
+	msg, err := server.GetProcessMetadata(ctx, &protoReq)
+	return msg, metadata, err
+}
+
 func request_BeemonService_StreamEvents_0(ctx context.Context, marshaler runtime.Marshaler, client BeemonServiceClient, req *http.Request, pathParams map[string]string) (BeemonService_StreamEventsClient, runtime.ServerMetadata, error) {
 	var (
 		protoReq StreamEventsRequest
@@ -194,6 +233,26 @@ func RegisterBeemonServiceHandlerServer(ctx context.Context, mux *runtime.ServeM
 		}
 		forward_BeemonService_ListProcesses_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_BeemonService_GetProcessMetadata_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		var stream runtime.ServerTransportStream
+		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/beemon.v1.BeemonService/GetProcessMetadata", runtime.WithHTTPPathPattern("/api/v1/processes/{pid}/metadata"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := local_request_BeemonService_GetProcessMetadata_0(annotatedContext, inboundMarshaler, server, req, pathParams)
+		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_BeemonService_GetProcessMetadata_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 
 	mux.Handle(http.MethodGet, pattern_BeemonService_StreamEvents_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		err := status.Error(codes.Unimplemented, "streaming calls are not yet supported in the in-process transport")
@@ -278,6 +337,23 @@ func RegisterBeemonServiceHandlerClient(ctx context.Context, mux *runtime.ServeM
 		}
 		forward_BeemonService_ListProcesses_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 	})
+	mux.Handle(http.MethodGet, pattern_BeemonService_GetProcessMetadata_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+		ctx, cancel := context.WithCancel(req.Context())
+		defer cancel()
+		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
+		annotatedContext, err := runtime.AnnotateContext(ctx, mux, req, "/beemon.v1.BeemonService/GetProcessMetadata", runtime.WithHTTPPathPattern("/api/v1/processes/{pid}/metadata"))
+		if err != nil {
+			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		resp, md, err := request_BeemonService_GetProcessMetadata_0(annotatedContext, inboundMarshaler, client, req, pathParams)
+		annotatedContext = runtime.NewServerMetadataContext(annotatedContext, md)
+		if err != nil {
+			runtime.HTTPError(annotatedContext, mux, outboundMarshaler, w, req, err)
+			return
+		}
+		forward_BeemonService_GetProcessMetadata_0(annotatedContext, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+	})
 	mux.Handle(http.MethodGet, pattern_BeemonService_StreamEvents_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
@@ -317,12 +393,14 @@ func RegisterBeemonServiceHandlerClient(ctx context.Context, mux *runtime.ServeM
 
 var (
 	pattern_BeemonService_ListProcesses_0       = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"api", "v1", "processes"}, ""))
+	pattern_BeemonService_GetProcessMetadata_0  = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"api", "v1", "processes", "pid", "metadata"}, ""))
 	pattern_BeemonService_StreamEvents_0        = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 2, 4}, []string{"api", "v1", "processes", "pid", "events"}, ""))
 	pattern_BeemonService_GetNamespaceDetails_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2, 1, 0, 4, 1, 5, 3, 1, 0, 4, 1, 5, 4}, []string{"api", "v1", "namespaces", "ns_type", "ns_inode"}, ""))
 )
 
 var (
 	forward_BeemonService_ListProcesses_0       = runtime.ForwardResponseMessage
+	forward_BeemonService_GetProcessMetadata_0  = runtime.ForwardResponseMessage
 	forward_BeemonService_StreamEvents_0        = runtime.ForwardResponseStream
 	forward_BeemonService_GetNamespaceDetails_0 = runtime.ForwardResponseMessage
 )
